<resources>
    <string name="app_name">University Labster</string>
    <string name="noutati">noutati</string>
    <string name="profil">profil</string>
    <string name="orar">orar</string>
    <string name="studenti">studenti</string>
    <string name="student_inainte_de_email">email:</string>
    <string name="trimitere_fisier_hint">trimite fisier aici</string>
    <string name="noutati_de_astazi">Noutati de astazi</string>
    <string name="noutati_saptamana">Noutati saptamana</string>
    <string name="linkuri_primite">linkuri primite</string>
    <string name="refresh">refresh</string>
    <string name="check_in">check-in</string>
    <string name="check_inuri">Check-inuri:</string>
    <string name="cursuri">Cursuri:</string>
    <string name="student_inainte_de_profesor">profesor: </string>
    <string name="student_inainte_de_curs">curs: </string>
    <string name="adauga_curs">Adauga Curs</string>
    <string name="adresa">adresa</string>
    <string name="an">an</string>
    <string name="email_profesor">email profesor</string>
    <string name="interval_orar_de_format_ss_mm_ee_mm">interval orar de format ss:mm-ee:mm</string>
    <string name="facultate">facultate</string>
    <string name="nume_curs">nume curs</string>
    <string name="nume_profesor">nume profesor</string>
    <string name="zi_curs">zi curs</string>
    <string name="salveaza_curs">Salveaza Curs</string>
</resources>
